Issue #10601: sys.displayhook uses 'backslashreplace' error handler on UnicodeEncodeError.